# https_client

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  build_only.yml
example/: CMakeLists.txt  main.cpp
include/private/: http_session.h  logger.h  ssl_context_builder.h
include/public/: common_types.h  https_client.h  https_client_export.h
src/: http_session.cpp  https_client.cpp  logger.cpp
src/android/: ssl_context_builder.cpp
src/apple/: ssl_context_builder.cpp
src/default/: ssl_context_builder.cpp
tests/: CMakeLists.txt  mock_server.h  test_async.cpp  test_async_requests.cpp  test_error_handling.cpp  test_parallel.cpp  test_proxy.cpp  test_sync.cpp  test_sync_requests.cpp
vcpkg_port/: https-client-config.cmake  portfile.cmake  vcpkg.cmake
vcpkg_port_example/: https-client-config.cmake  portfile.cmake  vcpkg.json
